<resources>
    <string name="app_name">Gyde</string>

    <string name="title_activity_card_ioexample">CardIOExample</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_guide_home">GuideHome</string>
    <string name="title_activity_design_tour">DesignTour</string>
    <string name="title_activity_my_tours">MyTours</string>

    <string name="search_tour_field_hint">Where to?</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="facebook_application_id" translatable="false">161908287977418</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb161908287977418</string>
    <string name="transport_id" translatable="false">123</string>

    <string name="firebase_user_locations_path" translatable="false">locations/users</string>
    <string name="firebase_users_path" translatable="false">users</string>
    <string name="firebase_tours_path" translatable="false">tours</string>
    <string name="firebase_trav_path" translatable="false">traveler</string>
    <string name="firebase_guide_path" translatable="false">guide</string>
    <string name="firebase_book_path" translatable="false">bookings</string>
    <string name="firebase_tID_path" translatable="false">travelerID</string>
    <string name="firebase_gID_path" translatable="false">guideID</string>
    <string name="firebase_tour_path" translatable="false">tour</string>
    <string name="firebase_sameasprev_path" translatable="false">sameAsPrev</string>
    <string name="firebase_displayname_path" translatable="false">displayName</string>
    <string name="firebase_email_path" translatable="false">email</string>
    <string name="firebase_phonenumber_path" translatable="false">phoneNumber</string>
    <string name="firebase_uid_path" translatable="false">uid</string>
    <string name="firebase_isguide_path" translatable="false">isGuide</string>
    <string name="firebase_bio_path" translatable="false">bio</string>
    <string name="firebase_loc_path" translatable="false">location</string>
    <string name="firebase_tourIDs_path" translatable="false">tourIDs</string>
    <string name="firebase_activetour_path" translatable="false">activeTour</string>
    <string name="firebase_thisID_path" translatable="false">thisID</string>
    <string name="firebase_otherID_path" translatable="false">otherID</string>
    <string name="firebase_thisside_path" translatable="false">thisSide</string>
    <string name="firebase_otherside_path" translatable="false">otherSide</string>
    <string name="firebase_day_path" translatable="false">day</string>
    <string name="firebase_hour_path" translatable="false">hour</string>

    <string name="tracking_notification_text">Tracking, tap to cancel</string>

    <string name="guide_your_day_of_exploration">Guide Your Day of Exploration</string>

    <string name="design_tour_button_text">Design A Tour</string>
    <string name="my_tours_button_text">My Tours</string>
    <string name="pick_day_button_text">Pick a day</string>

    <string name="todo">TODO</string>

    <string name="profile_txt">Profile</string>
    <string name="display_name_txt">Name</string>
    <string name="email_txt">Email</string>
    <string name="phone_num_txt">Phone Number</string>
    <string name="bio_txt">Bio</string>

    <string name="name_txt">Name:</string>
    <string name="location_txt">Location:</string>
    <string name="price_txt">Price:</string>
    <string name="stops_txt">Stops:</string>
    <string name="duration_txt">Duration:</string>
    <string name="transport_txt">Transport:</string>
    <string name="walk_txt">Walk</string>
    <string name="drive_txt">Drive</string>
    <string name="capacity_txt">Capacity:</string>
    <string name="tags_txt">Tags:</string>
    <string name="with_txt">With:</string>

    <string name="name_prompt">Please enter a name for the tour</string>
    <string name="location_prompt">Please enter a location for the tour</string>
    <string name="price_prompt">Please enter a price for the tour</string>
    <string name="duration_prompt">Please enter a duration for the tour</string>
    <string name="transport_prompt">Please enter a mode of transportation for the tour</string>
    <string name="delete_tour_confirmation">Are you sure you want to delete this tour?</string>
    <string name="cancel_tour_confirmation">Are you sure you want to cancel this tour?</string>
    <string name="start_tour_confirmation">Start this tour?</string>
    <string name="guide_busy_msg">Sorry, the guide is busy during that time</string>
    <string name="trav_busy_msg">You already have a booking during that time</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>

    <string name="cancel_booking_toast">Cancelling booking...</string>

    <string name="save_txt">Save</string>
    <string name="book_txt">Book</string>
    <string name="cancel_txt">Cancel</string>
    <string name="ok_txt">Ok</string>
    <string name="done_txt">Done</string>
    <string name="delete_txt">Delete</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="close_txt">Close</string>

    <string name="cancel_tour_txt">Cancel Tour</string>
    <string name="start_tour_txt">Start Tour</string>
    <string name="end_tour_txt">End Tour</string>

    <string name="traveler_txt">Traveler</string>
    <string name="guide_txt">Guide</string>
    <string name="view_txt">View</string>
    <string name="title_activity_book_tour">BookTour</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_my_bookings">MyBookings</string>
    <string name="title_activity_tour_mode">TourMode</string>

</resources>
